src/assets/styles.css
* {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
}

body {
    font-family: system-ui, sans-serif;
}

.widget__button {
    display: flex;
    justify-content: center;
    align-items: center;

    height: 60px;
    width: 60px;
    aspect-ratio: 1;

    position: absolute;
    bottom: 4rem;
    right: 4rem;

    background-color: var(--base);
    border: 1px solid rgba(0, 0, 0, 0.5);
    border-radius: 50%;
    cursor: pointer;
    transition-duration: 300ms;

    & > svg {
        fill: var(--secondary);
    }

    &:active {
        scale: 0.85;
    }
}

.widget__container {
    position: fixed;
    inset: 0;

    & > * {
        position: absolute;
        z-index: 10000;
    }
}

.widget {
    display: flex;
    flex-direction: column;

    width: 100%;
    max-width: 400px;
    height: 100dvh;
    padding: 20px 0px;
    opacity: 0;

    background-color: var(--base);

    transform: translateX(-100%);
    transition: transform 300ms ease-in-out, opacity 300ms ease-in-out 300ms;

    & > .widget__header,
    & > .widget__footer {
        padding: 0 20px;
    }

    & hr {
        border: 1px solid var(--base-content / 0.5);
    }
}

.widget--dark {
    --base: #000;
    --base-content: #fff;
    --primary: #39a900;
    --primary-content: #fff;
    --secondary: #fff;
    --secondary-content: #000;
}

.widget__overlay {
    height: 100%;
    width: 100%;
    background-color: rgba(0, 0, 0, 0.5);
    z-index: -1;

    opacity: 0;
    transition-duration: 300ms;
}

#widget__toggle {
    display: none;
}

.widget__container:has(#widget__toggle:checked) .widget {
    transform: translateX(0);
    opacity: 1;

    transition: transform 300ms ease-in-out, opacity 300ms ease-in-out;
}

.widget__container:has(#widget__toggle:checked) .widget__overlay {
    opacity: 1;
    z-index: 9000;
}

.widget__header h3 {
    text-align: center;
    font-size: 1.8rem;
    color: var(--secondary);
    padding-bottom: 10px;
}

.widget__main {
    height: 100%;

    display: grid;
    grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
    padding: 20px;
    gap: 20px;

    overflow-y: auto;
}

.widget__item {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;

    width: 100%;
    height: auto;

    padding: 10px;
    gap: 5px;

    border-radius: 10px;

    transition-duration: 300ms;
    text-align: center;
    font-size: 20px;

    &:hover {
        outline: 2px solid var(--secondary);
        background-color: rgba(0, 0, 0, 0.1);
    }

    & > .widget__item-content {
        display: flex;
        flex-direction: column;
        justify-content: center;
        align-items: center;
        user-select: none;
        gap: 5px;
        color: var(--base-content);
        & svg {
            fill: var(--base-content);
        }
    }

    & > .widget__item-footer {
        display: flex;
        justify-content: center;
        align-items: center;
        gap: 5px;
        & > .widget__item-indicator {
            width: 15px;
            height: 2.5px;
            background-color: rgb(161, 161, 161);
        }

        & > .active {
            background-color: var(--secondary);
        }
    }
}

.widget__item--active {
    outline: var(--secondary) 3px solid;
    &:hover {
        outline: var(--secondary) 3px solid;
    }
}

.widget__footer > span {
    display: flex;
    justify-content: center;
    align-items: center;

    padding-top: 20px;

    & button {
        background-color: var(--secondary);
        color: var(--secondary-content);
        border: none;
        cursor: pointer;

        padding: 10px 15px;
        display: flex;
        justify-content: center;
        align-items: center;
        gap: 5px;
        transition-duration: 300ms;

        &:hover {
            scale: 1.05;
        }

        & > svg {
            fill: var(--secondary-content);
            width: 19px;
            height: 19px;
        }
    }

    & button:nth-child(1) {
        border-radius: 10px 0px 0px 10px;
        flex-grow: 2;
    }

    & button:nth-child(2) {
        border-radius: 0px 10px 10px 0px;
        flex-grow: 1;
    }
}

